--- a/config/services.yml
+++ b/config/services.yml
@@ -1,6 +1,6 @@
 #
 # @package Meta Tags phpBB SEO
-# @version $Id: services.yml 429 2014-07-09 14:10:55Z  $
+# @version $$
 # @copyright (c) 2014 www.phpbb-seo.com
 # @license http://opensource.org/licenses/gpl-2.0.php GNU General Public License v2
 #
