[ticket/4] implement open graph tags
og:title, description, url, locale & site_name.

--- a/config/services.yml
+++ b/config/services.yml
@@ -22,5 +22,6 @@ services:
         arguments:
             - @phpbbseo.meta.core
             - @dbal.conn
+            - @?phpbbseo.usu.core
         tags:
             - { name: event.listener }
