--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,11 @@
 		"display-name": "Meta Tags phpBB SEO",
 		"soft-require": {
 			"phpbb/phpbb": ">=3.1.0-RC2"
+		},
+		"version-check": {
+			"host": "version.phpbb-seo.com",
+			"directory": "/",
+			"filename": "meta.json"
 		}
 	}
 }
